--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "astro-blog",
   "version": "2.3.0",
   "scripts": {
-    "dev": "astro check --watch & astro dev",
-    "start": "astro dev",
+    "check": "astro check --watch",
+    "dev": "astro dev",
     "build": "astro build && jampack ./dist",
     "preview": "astro preview",
     "sync": "astro sync",
-    "astro": "astro",
-    "format:check": "prettier --plugin-search-dir=. --check .",
-    "format": "prettier --plugin-search-dir=. --write .",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/check": "^0.2.0",
     "@astrojs/rss": "^3.0.0",
     "@resvg/resvg-js": "^2.4.1",
     "astro": "^3.0.6",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
+    "marked": "^9.0.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "satori": "^0.8.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@astrojs/react": "^3.0.0",
