Different icon for posts/project w react-icons

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
     "marked": "^9.0.0",
+    "react-icons": "^5.0.1",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "satori": "^0.8.1",
